--- a/Salles SousaStore/index.html
+++ b/Salles SousaStore/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Loja online Salles – melhores ofertas e produtos">
+<meta name="theme-color" content="#ffe600">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>salles-sousastore</title>
